chore: (requirements.yaml) change attributes order

--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,14 +1,14 @@
 dependencies:
-- alias: "graphql-query"
-  name: "activiti-cloud-query-graphql-query"
+- name: "activiti-cloud-query-graphql-query"
   repository: "https://introproventures.storage.googleapis.com"
   version: "1.0.55"
-- alias: "graphql-notifications"
-  name: "activiti-cloud-query-graphql-notifications"
+  alias: "graphql-query"
+- name: "activiti-cloud-query-graphql-notifications"
   repository: "https://introproventures.storage.googleapis.com"
   version: "1.0.43"
-- alias: "graphql-subscriptions"
-  name: "activiti-cloud-query-graphql-subscriptions"
+  alias: "graphql-notifications"
+- name: "activiti-cloud-query-graphql-subscriptions"
   repository: "https://introproventures.storage.googleapis.com"
   version: "1.0.40"
+  alias: "graphql-subscriptions"
   
