--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,14 +1,24 @@
 ---
 dependencies:
+- name: infrastructure
+  repository: https://activiti.github.io/activiti-cloud-charts/
+  version: 0.3.0
+- condition: activiti-cloud-modeling.enabled,modeling.enabled
+  name: activiti-cloud-modeling
+  repository: https://activiti.github.io/activiti-cloud-charts/
+  version: 0.3.0  
+- name: application
+  repository: https://activiti.github.io/activiti-cloud-charts/
+  version: 0.3.0  
 - name: "activiti-cloud-query-graphql-query"
-  repository: "https://introproventures.storage.googleapis.com"
+  repository: "https://introproventures-chartmuseum.storage.googleapis.com"
   version: "1.0.56"
   alias: "graphql-query"
 - name: "activiti-cloud-query-graphql-notifications"
-  repository: "https://introproventures.storage.googleapis.com"
+  repository: "https://introproventures-chartmuseum.storage.googleapis.com"
   version: "1.0.44"
   alias: "graphql-notifications"
 - name: "activiti-cloud-query-graphql-subscriptions"
-  repository: "https://introproventures.storage.googleapis.com"
+  repository: "https://introproventures-chartmuseum.storage.googleapis.com"
   version: "1.0.41"
   alias: "graphql-subscriptions"
